--- a/src/components/RadioGroup/RadioGroup.scss
+++ b/src/components/RadioGroup/RadioGroup.scss
@@ -5,52 +5,43 @@
     font-weight: bold;
     color: $Instock-Black;
     margin-bottom: 4px;
-    display: block; // Display label on its own line
+    display: block; 
+    @include mobile-labels-links-buttons;
 }
 
 .radio-group {
     display: flex;
-    gap: 16px; // Space between each radio option
-    align-items: center;
+    width: 100%; 
+    justify-content: space-between;
+    align-items: center; 
+    margin-bottom: 16px;
 }
 
 .radio-group__label {
     display: flex;
     align-items: center;
-    font-size: 14px;
+    @include mobile-p1-body-large;
     color: $Slate;
-    cursor: pointer;
+
+    // when selected change color
+    input[type="radio"]:checked + span {
+        color: $Instock-Black;
+    }
 }
 
 .radio-group__label input[type="radio"] {
-    appearance: none; // Remove default radio styling
-    width: 16px;
-    height: 16px;
     margin-right: 8px;
-    border: 2px solid $Cloud;
-    border-radius: 50%;
-    position: relative;
-    display: inline-block;
-    vertical-align: middle;
+    width: 16px;
+    height: 16px; 
+}
 
-    &:checked {
-        border-color: $Instock-Indigo; 
+
+@media (min-width: $tablet-breakpoint) {
+    .label {
+        @include tablet-labels-links-buttons;
     }
 
-    &:checked::before {
-        content: '';
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        width: 8px;
-        height: 8px;
-        background-color: $Instock-Indigo;
-        border-radius: 50%;
-        transform: translate(-50%, -50%);
-    }
-
-    &:focus {
-        outline: none;
-        border-color: $Instock-Indigo;
+    .radio-group__label {
+        @include tablet-p1-body-large;
     }
 }
