--- a/src/components/InventoryList/InventoryList.scss
+++ b/src/components/InventoryList/InventoryList.scss
@@ -3,7 +3,30 @@
 
 .inventoryList {
     &__item {
+        display: flex;
+        flex-direction: column;
+        align-items: space-between;
         padding: 1.5rem;
         border-top: 1px solid $Cloud;
+    }
+    &__info-column {
+        display:flex;
+        flex-direction: row;
+        justify-content: start;
+        gap: 30vw;
+    }
+    &__column1, &__column2 {
+        display: flex;
+        flex-direction: column;
+        align-items: space-between;
+    }
+    @include tablet {
+        &__item-label{
+            display: none;
+        }
+    }
+    &__interaction {
+        display: flex;
+        justify-content: space-between;
     }
 }
