--- a/src/components/InventoryList/InventoryList.scss
+++ b/src/components/InventoryList/InventoryList.scss
@@ -1,32 +1,115 @@
-@use '../../styles/variables' as *;
-@use '../../styles/mixins' as *;
+@use "../../App.scss" as *;
+@use "../../styles/variables" as *;
+@use "../../styles/mixins" as *;
 
-.inventoryList {
-    &__item {
-        display: flex;
-        flex-direction: column;
-        align-items: space-between;
-        padding: 1.5rem;
-        border-top: 1px solid $Cloud;
+.inventory-card {
+    display: flex;
+    flex-direction: column;
+}
+
+.inventory__list {
+    display: flex;
+    flex-direction: column;
+    padding: $padding-24;
+
+    &-header {
+        @include header;
     }
-    &__info-column {
-        display:flex;
-        flex-direction: row;
-        justify-content: start;
-        gap: 30vw;
-    }
-    &__column1, &__column2 {
-        display: flex;
-        flex-direction: column;
-        align-items: space-between;
-    }
-    @include tablet {
-        &__item-label{
-            display: none;
+
+    &-heading {
+        @include heading;
+
+        &-actions {
+            justify-content: center;
         }
     }
-    &__interaction {
-        display: flex;
-        justify-content: space-between;
+
+    &-row {
+        @include row;
+    }
+}
+
+.inventory__body {
+    display: flex;
+    flex-direction: column;
+
+    &-row {
+        @include body-row;
+    }
+
+    &-cell {
+        @include body-cell;
+    }
+}
+
+.inventory__cell-header {
+    @include cell-header;
+}
+
+.inventory__link {
+    color: $Instock-Indigo;
+    font-weight: 600;
+    display: inline-flex;
+    align-items: center;
+    font-size: 1rem;
+    text-decoration: none;
+
+    &::after {
+        margin-left: $padding-4;
+        font-size: 1rem;
+    }
+
+    &:hover {
+        text-decoration: underline;
+    }
+}
+
+.inventory__contact,
+.inventory__contact-info {
+    margin: 0;
+    font-size: 1rem;
+    color: $Slate;
+
+    .inventory__contact-email {
+        color: $Instock-Black;
+        text-decoration: none;
+
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+}
+
+.inventory__actions {
+    display: flex;
+    gap: $padding-8;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+
+    @include tablet {
+        justify-content: center;
+        width: auto;
+    }
+
+    @include desktop {
+        justify-content: center;
+        width: auto;
+    }
+
+    .inventory__edit {
+        color: $Instock-Indigo;
+        font-size: 1rem;
+        display: inline-flex;
+        align-items: center;
+    }
+
+    .inventory__delete {
+        color: $Red;
+        background: none;
+        border: none;
+        font-size: 1rem;
+        cursor: pointer;
     }
 }
