Edit Inventory Item complete

--- a/src/components/EditInventoryItemBody/EditInventoryItemBody.scss
+++ b/src/components/EditInventoryItemBody/EditInventoryItemBody.scss
@@ -14,7 +14,14 @@
 }
 
 .text-field-group {
+  .quantity_field {
+    width: 25%;
+  }
+
   margin-bottom: 16px;
+  .description_field {
+    height: 100px;
+  }
 }
 
 
