--- a/src/components/TextFieldGroup/TextFieldGroup.scss
+++ b/src/components/TextFieldGroup/TextFieldGroup.scss
@@ -23,6 +23,18 @@
     box-sizing: border-box;
 }
 
+.text-field-group__textarea {
+    @include mobile-p1-body-large;
+    padding: 8px 16px; 
+    border: 1px solid $Cloud;
+    border-radius: 20px; 
+    color: $Slate;
+    height: 36px;
+    width: 100%; 
+    box-sizing: border-box;
+    resize: none;
+}
+
 .text-field-group__input:focus {
     border-color: $Instock-Indigo; 
     color: $Instock-Black;
