--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -345,3 +345,95 @@
     flex: 1;
   }
 }
+
+//  --------- Mixin for warehouse forms --------- 
+
+@mixin warehouse-form-styles {
+  background-color: $White;
+  border-radius: 1.25rem;
+
+  &__section {
+    padding: 0rem 2rem 2rem 2rem;
+
+    &--details {
+      border-bottom: 0.0625rem solid $Cloud;
+    }
+  }
+
+  &__title {
+    @include mobile-subheader;
+  }
+
+  &__label {
+    display: block;
+    margin-bottom: $padding-4;
+    padding-top: 1rem;
+    @include mobile-labels-links-buttons;
+  }
+
+  &__input {
+    width: 90%;
+    padding: 0rem $padding-16;
+    color: $Instock-Black;
+    @include mobile-p2-body-medium;
+    @include form-field;
+
+    &::placeholder {
+      font-weight: 400;
+      font-size: 0.875rem;
+      line-height: 1.375rem;
+      color: $Slate;
+    }
+  }
+
+  &__error-message {
+    display: flex;
+    align-items: center;
+    color: red;
+    font-size: 0.75rem;
+    line-height: 1.125rem;
+    font-weight: 400;
+    margin: 0;
+    padding-top: 0.25rem;
+  }
+
+  &__error-icon {
+    width: 1rem;
+    height: 1rem;
+    margin-right: 0.3125rem;
+  }
+
+  &__input--error {
+    border: 2px solid red;
+  }
+
+  @include tablet {
+    display: flex;
+    flex-direction: column;
+
+    &__section-wrapper {
+      display: flex;
+      flex-wrap: nowrap;
+      justify-content: space-between;
+      padding: 0rem;
+      margin: 1.5rem 0rem;
+    }
+
+    &__section--details {
+      border-right: 0.0625rem solid $Cloud;
+    }
+
+    &__section--details,
+    &__section--contact {
+      flex: 1;
+      max-width: 48%;
+      border-bottom: none;
+    }
+  }
+
+  @include desktop {
+    &__input {
+      width: 93%;
+    }
+  }
+}
