--- a/src/components/EditWarehouseForm/EditWarehouseForm.scss
+++ b/src/components/EditWarehouseForm/EditWarehouseForm.scss
@@ -2,77 +2,21 @@
 @use "../../styles/mixins" as *;
 
 .warehouse-form {
-    @include warehouse-form-styles;
-}
-
-.warehouse-form {
-    background-color: $White;
+    
 
     &__actions {
-        display: flex;
-        justify-content: space-between;
-        gap: $padding-16;
-        flex-direction: row;
-        padding: 1rem 2rem;
-        background-color: $Light-Grey;
-    
-        @include tablet {
-          gap: $padding-32;
-        }
-      }
-
-      &__actions-wrapper {
-        display: flex;
-        width: 100%;
-        gap: $padding-16;
-      }
-    
-      &__submit {
-        width: 100%;
-        @include mobile-p2-body-medium;
-        @include primary-button;
-    
-        &:hover {
-          background-color: $Graphite;
-        }
-      }
-    
-      &__cancel {
-        width: 100%;
-        text-align: center;
-        text-decoration: none;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        @include mobile-p2-body-medium;
-        @include secondary-button;
-        color: $Slate;
-    
-        &:hover {
-          color: $Instock-Indigo;
-          border-color: $Instock-Indigo;
-        }
-      }
-}
-
-@include tablet {
-    .warehouse-form {
-        &__actions {
-            display: flex;
-            justify-content: flex-end;
-            padding: $padding-32;
-          }
-      
-          &__actions-wrapper {
-            display: flex;
-            width: 30%;
-            gap: 1rem;
-          }
-      
-          &__submit {
-            min-width: 3.8125rem;
-          }
-
+        @include form-button-section
     }
 
+    &__actions-wrapper {
+        @include form-button-container
+    }
+
+    &__submit {
+       @include form-button-submit
+    }
+
+    &__cancel {
+       @include form-button-cancel
+    }
 }
