--- a/src/components/InventoryList/InventoryList.scss
+++ b/src/components/InventoryList/InventoryList.scss
@@ -2,6 +2,11 @@
 @use "../../styles/variables" as *;
 @use "../../styles/mixins" as *;
 
+.inventoryList{
+    display:flex;
+    flex-direction: column;
+}
+
 .inventory-card {
     display: flex;
     flex-direction: column;
@@ -64,8 +69,8 @@
     }
 }
 
-.inventory__contact,
-.inventory__contact-info {
+.inventory__qty,
+.inventory__warehouse {
     margin: 0;
     font-size: 1rem;
     color: $Slate;
