--- a/src/App.scss
+++ b/src/App.scss
@@ -5,11 +5,6 @@
   font-family: "Titillium Web", "Arial", sans-serif;
 }
 
-body {
-  margin: 0;
-  box-sizing: border-box;
-}
-
 li {
   list-style-type: none;
 }
@@ -19,6 +14,18 @@ ul {
 }
 
 body {
+  margin: 0;
+  box-sizing: border-box;
   background: linear-gradient(rgba($Graphite, 1) 200px, rgba($White, 1) 200px);
   min-height: 100vh;
+}
+
+.root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.page-content {
+  flex: 1;
 }
