--- a/src/components/WarehouseHeader/WarehouseHeader.scss
+++ b/src/components/WarehouseHeader/WarehouseHeader.scss
@@ -18,6 +18,7 @@
   display: flex;
   flex-direction: column;
   padding: $padding-24;
+  padding-top: 0;
 
   @include tablet {
     flex-direction: row;
